--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
               </div>
             </div>
           </div>
+        </header>
           <div class="table"></div>
           <div class="header-bottom">
             <div class="container header-container">
@@ -64,11 +65,40 @@
                 <div class="col-sm-6">
                   <h2>Are you looking for woodden furniture for your place?</h2>
                   <h1>This is the Right Place</h1>
-                  <a href="" class="btn btn-warning">Furniture</a>
+                  <a href="" class="btn btn-warning"> Explore Furniture</a>
                 </div>
               </div>
             </div>
-    </header>
+            <p>
+            <div class="col-sm-12">
+                <div class="header-top">
+                    <div class="container">
+                      <div class="row">
+                          <div class="logo">
+                            <img src="img/incono.svg" alt="" /> <h2><strong> Who whe are </strong>  </h2>
+                            <div class="col -sm-5">
+                            </div>
+                            </div>
+                          </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<div class="container woodies">
+    <div class="row">
+      <div class="col-sm-6">
+        <img src="img/woodies.jpg" class="img-fluid" alt="" />
+      </div>
+      <div class="col-sm-6 woodies-text-center">
+        <div>
+          <h3>WOODIES is the <strong>home of modern wooden furniture</strong></h3>
+          <p>the answer to your need for furniture with shapes, sizes and colors. </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</p>
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
