--- a/index.html
+++ b/index.html
@@ -13,92 +13,88 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" 
-  />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-    <header>
-        <div class="header-top">
-            <div class="container">
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="logo">
-                    <img src="img/logo.svg" alt="" />
-                  </div>
-                </div>
-                <div class="col-sm-8">
-                  <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="container-fluid">
-                      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                          <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" aria-current="page" href="#">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" aria-current="page" href="#">How it works</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" aria-current="page" href="#">Categories</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" aria-current="page" href="#">Testimony</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link btn btn-outline-secondary" aria-current="page" href="#"
-                            >SIGN UP</a
-                          >
-                        </li>
-                      </ul>
-                    </div>
-                  </nav>
-                </div>
+
+  <body>
+    <header class="header">
+      <div class="header-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="logo">
+                <img src="img/logo.svg" alt="" />
               </div>
+            </div>
+
+            <div class="col-sm-8">
+              <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container-fluid">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="#">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="#">How it works</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="#">Categories</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="#">Testimony</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link btn btn-outline-secondary" aria-current="page" href="#"
+                        >SIGN UP</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </nav>
             </div>
           </div>
-        </header>
-          <div class="table"></div>
-          <div class="header-bottom">
-            <div class="container header-container">
-              <div class="row">
-                <div class="col-sm-6">
-                  <h2>Are you looking for woodden furniture for your place?</h2>
-                  <h1>This is the Right Place</h1>
-                  <a href="" class="btn btn-warning"> Explore Furniture</a>
-                </div>
-              </div>
-            </div>
-            <p>
-            <div class="col-sm-12">
-                <div class="header-top">
-                    <div class="container">
-                      <div class="row">
-                          <div class="logo">
-                            <img src="img/incono.svg" alt="" /> <h2><strong> Who whe are </strong>  </h2>
-                            <div class="col -sm-5">
-                            </div>
-                            </div>
-                          </div>
-            </div>
         </div>
-    </div>
-</div>
-</div>
-<div class="container woodies">
-    <div class="row">
-      <div class="col-sm-6">
-        <img src="img/woodies.jpg" class="img-fluid" alt="" />
       </div>
-      <div class="col-sm-6 woodies-text-center">
-        <div>
-          <h3>WOODIES is the <strong>home of modern wooden furniture</strong></h3>
-          <p>the answer to your need for furniture with shapes, sizes and colors. </p>
+
+      <div class="header-bottom">
+        <div class="container header-container">
+          <div class="row">
+            <div class="col-sm-6">
+              <h2>Are you looking for woodden furniture for your place?</h2>
+              <h1>This is the Right Place</h1>
+              <a href="" class="btn btn-warning"> Explore Furniture</a>
+            </div>
+          </div>
+        </div>
+        <div class="header-table"></div>
+      </div>
+    </header>
+
+    <div class="container"> 
+      <div class="row">
+        <div class="col-sm-12">
+      <img src="img/about.jpg" alt="">
+    </div>
+    </div>
+    
+
+    <div class="container woodies-furniture">
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="img/woodies_furniture.jpg" class="img-fluid" alt="" />
+        </div>
+        <div class="col-sm-6 woodies-text-center">
+          <div>
+            <h3>WOODIES is the <strong>home of modern wooden furniture</strong></h3>
+            <p>the answer to your need for furniture with shapes, sizes and colors. </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</p>
+
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
