--- a/index.html
+++ b/index.html
@@ -102,8 +102,34 @@
           </div>
         </div>
       </div>
-    
     </div>
+
+    <div class="header-bottom">
+      <div class="container header-container">
+        <div class="row">
+          <div class="col-sm-6">
+            <h2>Customized furniture <strong> made just for you </strong></h2>
+            <h3> Get it easy to adjust furniture to the shape and size of your dwelling or business. </h3>
+          </div>
+        </div>
+      </div>
+      <div class="header-sartenes"></div>
+    </div>
+
+    <div class="container"> 
+      <div class="row">
+        <div class="col-sm-3">
+          <h3  class="incono"> how to custom </h3>
+        </div>
+          <div class="col-sm-6">
+            <hr />
+          </div>
+          <div class="col-sm-3">
+          <h1 class="text-end"> how it works </h1>
+        </div>
+      </div>
+    </div>
+
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
