Se agrega ventana de categorias
se agrega ventana de categorias modificando codigo HTML y CSS

--- a/index.html
+++ b/index.html
@@ -176,6 +176,54 @@
     </div>
   </div>
 
+  <div class="position-relative">
+    <div id="galeria-categories" class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="rectangle-pink1"></div>
+            <img src="img/desk.png" alt="" class="desk">
+            <h3 class="encabezado-desk"> <strong> Desk </strong></h3>
+            <div class="button-desk">
+            <button type="button" class="btn btn-outline-secondary" >Shop Now</button>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="rectangle-yellow1"></div>
+            <img src="img/chair.png" alt="" class="chair">
+            <h3 class="encabezado-chair"> <strong> Chair </strong></h3>
+            <div class="button-chair">
+            <button type="button" class="btn btn-outline-secondary" >Shop Now</button>
+          </div>
+        </div> 
+        <div class="col-lg-4">
+          <div class="rectangle-blue"></div>
+            <img src="img/kitchenware.png" alt="" class="kitchenware">
+            <h3 class="encabezado-kitchenware"> <strong> kitchenware </strong></h3>
+            <div class="button-kitchenware">
+            <button type="button" class="btn btn-outline-secondary" >Shop Now</button>
+          </div>
+        </div> 
+        <div class="col-lg-4">
+          <div class="rectangle-pink2"></div>
+            <img src="img/book-shelf.png" alt="" class="book-shelf">
+            <h3 class="encabezado-book-shelf"> <strong> Book Shelf </strong></h3>
+            <div class="button-book-shelf">
+            <button type="button" class="btn btn-outline-secondary" >Shop Now</button>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="rectangle-yellow1"></div>
+            <img src="img/electronics.png" alt="" class="electronics">
+            <h3 class="encabezado-electronics"> <strong> Electronics </strong></h3>
+            <div class="button-electronics">
+            <button type="button" class="btn btn-outline-secondary" >Shop Now</button>
+          </div>
+        </div> 
+        
+        </div>
+      </div>
+    </div>
+
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
